--- a/mundo-naturali/angular.json
+++ b/mundo-naturali/angular.json
@@ -37,7 +37,8 @@
             "styles": [
               "src/styles.css",
               "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
-    "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css"
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
+              "node_modules/animate.css/animate.min.css"
             ],
             "scripts": []
           },
